--- a/Frontend/app/src/main/res/layout/friend_item.xml
+++ b/Frontend/app/src/main/res/layout/friend_item.xml
@@ -3,20 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@android:drawable/dialog_holo_light_frame"
+    android:backgroundTint="#FFFFFF"
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:padding="20dp"
     app:layout_anchorGravity="center">
 
     <ImageButton
-        android:contentDescription="shows activeness"
         android:id="@+id/active"
         android:layout_width="70dp"
         android:layout_height="60dp"
         android:layout_gravity="center|start"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="5dp"
-        android:background="@drawable/offline_icon" />
+        android:padding="10dp"
+        android:layout_margin="10dp"
+        android:background="@drawable/offline_icon"
+        android:contentDescription="shows activeness" />
 
     <Button
         android:id="@+id/email"
@@ -25,9 +27,7 @@
         android:layout_gravity="center|start"
         android:layout_marginRight="50dp"
         android:layout_weight="1"
-        android:backgroundTint="#FFFFFF"
-        android:text="Button"
-        android:textColor="#000000" />
+        android:text="Button" />
 
     <TextView
         android:id="@+id/view"
