--- a/Frontend/app/src/main/res/layout/message_item.xml
+++ b/Frontend/app/src/main/res/layout/message_item.xml
@@ -3,8 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
-    android:background="@android:drawable/dialog_holo_dark_frame"
-    android:backgroundTint="#000000"
     android:orientation="horizontal"
     android:padding="20dp">
 
@@ -12,22 +10,15 @@
         android:id="@+id/btnUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@null"
-        android:backgroundTint="@color/black"
-        android:text="Username"
-        android:textColor="#FFFFFF" />
+        android:text="Username" />
 
     <TextView
         android:id="@+id/placement"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:background="@null"
         android:padding="10dp"
-        android:textColor="#FFFFFF"
-        android:textColorHighlight="#FFFFFF"
-        android:textColorHint="#FFFDFD"
-        android:textColorLink="#FFFFFF"
+
         android:textSize="16sp" />
 
 </LinearLayout>
