added functions to admin, still need working, added test to signup and login activitys

--- a/Frontend/app/src/main/res/layout/activity_list.xml
+++ b/Frontend/app/src/main/res/layout/activity_list.xml
@@ -8,18 +8,19 @@
 
     <EditText
         android:id="@+id/editTextText2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
-        android:inputType="text"
         android:hint="Search Name"
+        android:inputType="text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/search"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/search"
-        app:layout_constraintWidth_percent="0.7"/>
+        app:layout_constraintVertical_bias="0.060000002"
+        app:layout_constraintWidth_percent="0.7" />
 
     <Button
         android:id="@+id/search"
@@ -27,15 +28,17 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:text="Search"
+        app:layout_constraintBottom_toBottomOf="@+id/editTextText2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/editTextText2"
-        app:layout_constraintBottom_toBottomOf="@+id/editTextText2"/>
+        app:layout_constraintVertical_bias="0.0" />
 
     <ScrollView
         android:id="@+id/scrollView3"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
+        android:contentDescription="List of People"
         app:layout_constraintTop_toBottomOf="@+id/editTextText2"
         app:layout_constraintBottom_toTopOf="@+id/back"
         app:layout_constraintVertical_weight="1">
@@ -52,10 +55,10 @@
         android:id="@+id/back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:text="Return"
-        android:layout_marginBottom="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
