--- a/Frontend/app/src/main/res/layout/activity_stats.xml
+++ b/Frontend/app/src/main/res/layout/activity_stats.xml
@@ -183,7 +183,7 @@
 
 
     <Button
-        android:id="@+id/stats_email"
+        android:id="@+id/stats_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
