--- a/Frontend/app/src/main/res/layout/person_item.xml
+++ b/Frontend/app/src/main/res/layout/person_item.xml
@@ -17,5 +17,12 @@
         android:id="@+id/btnDetails"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
         android:text="Details"/>
+
+    <Button
+        android:id="@+id/delete_user_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Delete User"/>
 </LinearLayout>
