--- a/Frontend/app/src/main/res/layout/chat_item.xml
+++ b/Frontend/app/src/main/res/layout/chat_item.xml
@@ -9,7 +9,7 @@
     android:padding="20dp">
 
     <TextView
-        android:id="@+id/btnUsername"
+        android:id="@+id/viewUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@null"
