--- a/Frontend/app/src/main/res/layout/activity_play.xml
+++ b/Frontend/app/src/main/res/layout/activity_play.xml
@@ -71,6 +71,25 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.37"
             app:layout_constraintWidth_percent="0.6" />
+
+        <!--        action move layout if DEAD-->
+        <ImageView
+            android:id="@+id/gameBoard_dead"
+            android:layout_width="194dp"
+            android:layout_height="178dp"
+            android:src="@drawable/dead"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent=".3"
+            app:layout_constraintHorizontal_bias="0.507"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.37"
+            app:layout_constraintWidth_percent="0.6" />
+
+
+
         <!--        green icons-->
         <ImageView
             android:id="@+id/greenIcon1"
@@ -463,6 +482,9 @@
 
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+
+
             <ImageButton
                 android:id="@+id/imageButton3"
                 android:layout_width="52dp"
@@ -572,26 +594,18 @@
             app:layout_constraintTop_toTopOf="@+id/longwhite"
             app:layout_constraintVertical_bias="0.48000002" />
 
-        <!--        random button-->
-        <Button
-            android:id="@+id/btn123"
-            android:layout_width="57dp"
-            android:layout_height="39dp"
-            android:text="Button"
-            app:layout_constraintBottom_toTopOf="@+id/oval3"
-            app:layout_constraintEnd_toStartOf="@+id/timericon"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/guideline7"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.132" />
 
-<!--        <ImageView-->
-<!--            android:id="@+id/imageView5"-->
-<!--            android:layout_width="45dp"-->
-<!--            android:layout_height="88dp"-->
-<!--            app:srcCompat="@drawable/icon_ambassador"-->
-<!--            tools:layout_editor_absoluteX="357dp"-->
-<!--            tools:layout_editor_absoluteY="295dp" />-->
+<!--        timer-->
+        <TextView
+            android:id="@+id/timerText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0"
+            app:layout_constraintBottom_toBottomOf="@+id/timericon"
+            app:layout_constraintEnd_toEndOf="@+id/timericon"
+            app:layout_constraintStart_toStartOf="@+id/timericon"
+            app:layout_constraintTop_toTopOf="@+id/timericon"
+            />
 
 
         <!-- ... additional ImageView elements for red, blue, yellow, green icons -->
