--- a/Frontend/app/src/main/res/menu/player_options_menu.xml
+++ b/Frontend/app/src/main/res/menu/player_options_menu.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/player1"
-        android:title="Player 1" />
+        android:id="@+id/player2Item"
+        android:title="Player 1"
+        />
     <item
-        android:id="@+id/player2"
+        android:id="@+id/player3Item"
         android:title="Player 2" />
     <item
-        android:id="@+id/player3"
+        android:id="@+id/player4Item"
         android:title="Player 3" />
 </menu>
