--- a/Frontend/app/src/main/res/layout/activity_menu.xml
+++ b/Frontend/app/src/main/res/layout/activity_menu.xml
@@ -129,6 +129,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.17000002"
-        app:srcCompat="@drawable/icon_captain" />
+        app:srcCompat="@drawable/captain" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
