--- a/Frontend/app/src/main/res/layout/activity_rules.xml
+++ b/Frontend/app/src/main/res/layout/activity_rules.xml
@@ -115,7 +115,7 @@
                     android:layout_margin="16dp"
                     android:background="@null"
                     android:scaleType="fitCenter"
-                    android:src="@drawable/assassin"
+                    android:src="@drawable/assassin1"
                     android:contentDescription="@string/assassin" />
 
                 <!-- Captain Card -->
@@ -126,7 +126,7 @@
                     android:layout_margin="16dp"
                     android:background="@null"
                     android:scaleType="fitCenter"
-                    android:src="@drawable/captain"
+                    android:src="@drawable/captain1"
                     android:contentDescription="@string/captain" />
 
                 <!-- Duke Card -->
@@ -137,7 +137,7 @@
                     android:layout_margin="16dp"
                     android:background="@null"
                     android:scaleType="fitCenter"
-                    android:src="@drawable/duke"
+                    android:src="@drawable/duke1"
                     android:contentDescription="@string/duke" />
 
                 <!-- Contra Card -->
@@ -148,7 +148,7 @@
                     android:layout_margin="16dp"
                     android:background="@null"
                     android:scaleType="fitCenter"
-                    android:src="@drawable/contra"
+                    android:src="@drawable/contra1"
                     android:contentDescription="@string/ambassador" />
 
                 <!-- Ambassador Card -->
@@ -159,7 +159,7 @@
                     android:layout_margin="16dp"
                     android:background="@null"
                     android:scaleType="fitCenter"
-                    android:src="@drawable/ambassador"
+                    android:src="@drawable/ambassador1"
                     android:contentDescription="@string/contra" />
 
             </LinearLayout>
