--- a/Frontend/app/src/main/res/layout/activity_play.xml
+++ b/Frontend/app/src/main/res/layout/activity_play.xml
@@ -608,21 +608,21 @@
             />
 
 
-        <ImageView
-            android:id="@+id/imageView5"
-            android:layout_width="58dp"
-            android:layout_height="91dp"
-            app:srcCompat="@drawable/icon_contra"
-            tools:layout_editor_absoluteX="141dp"
-            tools:layout_editor_absoluteY="417dp" />
+<!--        <ImageView-->
+<!--            android:id="@+id/imageView5"-->
+<!--            android:layout_width="58dp"-->
+<!--            android:layout_height="91dp"-->
+<!--            app:srcCompat="@drawable/icon_contra"-->
+<!--            tools:layout_editor_absoluteX="141dp"-->
+<!--            tools:layout_editor_absoluteY="417dp" />-->
 
-        <ImageView
-            android:id="@+id/imageView6"
-            android:layout_width="58dp"
-            android:layout_height="91dp"
-            app:srcCompat="@drawable/icon_ambassador"
-            tools:layout_editor_absoluteX="214dp"
-            tools:layout_editor_absoluteY="418dp" />
+<!--        <ImageView-->
+<!--            android:id="@+id/imageView6"-->
+<!--            android:layout_width="58dp"-->
+<!--            android:layout_height="91dp"-->
+<!--            app:srcCompat="@drawable/icon_ambassador"-->
+<!--            tools:layout_editor_absoluteX="214dp"-->
+<!--            tools:layout_editor_absoluteY="418dp" />-->
 
         <!-- ... additional ImageView elements for red, blue, yellow, green icons -->
 
