--- a/Frontend/app/src/main/res/layout/activity_main_charles.xml
+++ b/Frontend/app/src/main/res/layout/activity_main_charles.xml
@@ -9,35 +9,49 @@
 
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/couptitle"
-        tools:layout_editor_absoluteX="81dp"
-        tools:layout_editor_absoluteY="102dp" />
+        android:layout_marginTop="102dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/couptitle" />
 
     <ImageView
         android:id="@+id/imageView8"
         android:layout_width="wrap_content"
+
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/couplogo"
-        tools:layout_editor_absoluteX="124dp"
-        tools:layout_editor_absoluteY="224dp" />
+        android:layout_marginTop="29dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:srcCompat="@drawable/couplogo" />
+
 
     <ImageButton
-        android:id="@+id/imageView10"
+        android:id="@+id/main_login_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/logininbutton"
-        tools:layout_editor_absoluteX="74dp"
-        tools:layout_editor_absoluteY="469dp" />
+        android:layout_marginTop="51dp"
+        android:layout_marginEnd="1dp"
+        app:layout_constraintEnd_toEndOf="@+id/main_signup_btn"
+        app:layout_constraintTop_toBottomOf="@+id/imageView8"
+        android:background="@null"
+        app:srcCompat="@drawable/logininbutton" />
 
     <ImageButton
-        android:id="@+id/imageView12"
+        android:id="@+id/main_signup_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/signup"
-        tools:layout_editor_absoluteX="72dp"
-        tools:layout_editor_absoluteY="551dp" />
+        android:layout_marginTop="82dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="95dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/main_login_btn"
+        android:background="@null"
+        app:srcCompat="@drawable/signup" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
