--- a/Frontend/app/src/main/res/layout/activity_signup_charles.xml
+++ b/Frontend/app/src/main/res/layout/activity_signup_charles.xml
@@ -10,56 +10,114 @@
         android:id="@+id/imageView19"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/welcomeheader"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="76dp" />
+        android:layout_marginTop="76dp"
+        android:layout_marginBottom="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView21"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/welcomeheader" />
 
     <ImageView
-        android:id="@+id/imageView20"
+        android:id="@+id/imageViewN"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/largecirclebtn"
-        tools:layout_editor_absoluteX="93dp"
-        tools:layout_editor_absoluteY="404dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/signup_name_edt"
+        app:srcCompat="@drawable/largecirclebtn" />
+
+
+    <EditText
+        android:id="@+id/signup_name_edt"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="38dp"
+        android:gravity="center"
+        android:hint="Enter Name Here"
+        android:inputType="textEmailAddress"
+        app:layout_constraintBottom_toTopOf="@+id/signup_email_edt"
+        app:layout_constraintEnd_toEndOf="@+id/imageView21"
+        app:layout_constraintTop_toBottomOf="@+id/imageView21" />
 
     <ImageView
-        android:id="@+id/imageView20"
+        android:id="@+id/imageViewE"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/largecirclebtn"
-        tools:layout_editor_absoluteX="93dp"
-        tools:layout_editor_absoluteY="487dp" />
+        app:layout_constraintStart_toStartOf="@+id/imageViewN"
+        app:layout_constraintTop_toTopOf="@+id/signup_email_edt"
+        app:srcCompat="@drawable/largecirclebtn" />
+
+
+    <EditText
+        android:id="@+id/signup_email_edt"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginBottom="41dp"
+        android:gravity="center"
+        android:hint="Enter Email Here"
+        android:inputType="textEmailAddress"
+        app:layout_constraintBottom_toTopOf="@+id/signup_password_edt"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signup_name_edt" />
 
     <ImageView
         android:id="@+id/imageView21"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/couplogo"
-        tools:layout_editor_absoluteX="124dp"
-        tools:layout_editor_absoluteY="201dp" />
+        android:layout_marginStart="31dp"
+        android:layout_marginBottom="9dp"
+        app:layout_constraintBottom_toTopOf="@+id/signup_name_edt"
+        app:layout_constraintStart_toStartOf="@+id/imageViewN"
+        app:layout_constraintTop_toBottomOf="@+id/imageView19"
+        app:srcCompat="@drawable/couplogo" />
 
-    <ImageView
-        android:id="@+id/imageView22"
+
+    <ImageButton
+        android:id="@+id/signup_signup_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/sumbitbtn"
-        tools:layout_editor_absoluteX="126dp"
-        tools:layout_editor_absoluteY="641dp" />
+        android:layout_marginStart="33dp"
+        android:layout_marginBottom="11dp"
+        android:background="@null"
+        app:layout_constraintBottom_toTopOf="@+id/signup_login_btn"
+        app:layout_constraintStart_toStartOf="@+id/imageViewP"
+        app:layout_constraintTop_toBottomOf="@+id/signup_password_edt"
+        app:srcCompat="@drawable/sumbitbtn" />
 
-    <ImageView
-        android:id="@+id/imageView23"
+    <ImageButton
+        android:id="@+id/signup_login_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/switchtologinbtn"
-        tools:layout_editor_absoluteX="144dp"
-        tools:layout_editor_absoluteY="692dp" />
+        android:layout_marginStart="18dp"
+        android:layout_marginBottom="12dp"
+        android:background="@null"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/signup_signup_btn"
+        app:layout_constraintTop_toBottomOf="@+id/signup_signup_btn"
+        app:srcCompat="@drawable/switchtologinbtn" />
 
     <ImageView
-        android:id="@+id/imageView20"
+        android:id="@+id/imageViewP"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/largecirclebtn"
-        tools:layout_editor_absoluteX="93dp"
-        tools:layout_editor_absoluteY="573dp" />
+        app:layout_constraintStart_toStartOf="@+id/imageViewE"
+        app:layout_constraintTop_toTopOf="@+id/signup_password_edt"
+        app:srcCompat="@drawable/largecirclebtn" />
+
+    <EditText
+        android:id="@+id/signup_password_edt"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="23dp"
+        android:gravity="center"
+        android:hint="Enter Password Here:"
+        android:inputType="textEmailAddress"
+        app:layout_constraintBottom_toTopOf="@+id/signup_signup_btn"
+        app:layout_constraintEnd_toEndOf="@+id/imageViewP"
+        app:layout_constraintTop_toBottomOf="@+id/signup_email_edt" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
