let user names to seen

--- a/Frontend/app/src/main/res/layout/popup_image.xml
+++ b/Frontend/app/src/main/res/layout/popup_image.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:background="@android:color/transparent"
-    android:padding="40dp"> <!-- Set FrameLayout background to transparent -->
+    android:padding="40dp">
 
     <ImageView
         android:id="@+id/popup_image"
@@ -12,5 +12,5 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:background="@android:color/transparent"
-        android:scaleType="fitCenter" /> <!-- Set ImageView background to transparent -->
+        android:scaleType="fitCenter" />
 </FrameLayout>
