--- a/Frontend/app/src/main/res/layout/activity_play.xml
+++ b/Frontend/app/src/main/res/layout/activity_play.xml
@@ -249,9 +249,11 @@
             android:layout_height="88dp"
             android:src="@drawable/person"
             app:layout_constraintEnd_toStartOf="@+id/guideline6"
-            app:layout_constraintTop_toBottomOf="@+id/blueIcon2" />
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/guideline"
+            app:layout_constraintTop_toTopOf="@+id/guideline5" />
 
-            <ImageView
+        <ImageView
                 android:id="@+id/person2"
                 android:layout_width="53dp"
                 android:layout_height="88dp"
@@ -289,9 +291,7 @@
             android:layout_height="85dp"
             android:src="@drawable/greyoval"
             app:layout_constraintEnd_toStartOf="@+id/guideline6"
-            app:layout_constraintHorizontal_bias="0.104"
-            app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toTopOf="@+id/guideline5" />
+            app:layout_constraintTop_toBottomOf="@+id/blueIcon2" />
 
         <TextView
             android:id="@+id/oval4Text"
@@ -302,8 +302,10 @@
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@+id/oval4"
             app:layout_constraintEnd_toEndOf="@+id/oval4"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="@+id/oval4"
-            app:layout_constraintTop_toTopOf="@+id/oval4" />
+            app:layout_constraintTop_toTopOf="@+id/oval4"
+            app:layout_constraintVertical_bias="0.524" />
 
         <ImageView
             android:id="@+id/oval2"
